k8s/dev/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-agentic-app-frontend
  namespace: ai-agentic-app
  annotations:
    "service.beta.kubernetes.io/aws-load-balancer-type": external
    "service.beta.kubernetes.io/aws-load-balancer-scheme": internet-facing
    "service.beta.kubernetes.io/aws-load-balancer-nlb-target-type": ip
  labels:
    app.kubernetes.io/name: ai-agentic-app-frontend
    app.kubernetes.io/managed-by: deepagent
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ai-agentic-app-frontend
  ports:
    - name: http
      port: 80
      targetPort: 3000
