k8s/dev/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-agentic-app-frontend
  namespace: ai-agentic-app
  annotations:
    "alb.ingress.kubernetes.io/scheme": "internet-facing"
    "alb.ingress.kubernetes.io/target-type": "ip"
    "alb.ingress.kubernetes.io/listen-ports": "[{\"HTTP\": 80}]"
    "alb.ingress.kubernetes.io/healthcheck-path": "/"
  labels:
    app.kubernetes.io/name: ai-agentic-app-frontend
    app.kubernetes.io/managed-by: deepagent
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ai-agentic-app-frontend
                port:
                  number: 80
